<resources>
    <string name="app_name">Gustie Planner</string>
    <string name="user_profile">User Profile</string>
    <string name="name_hint">Enter name here</string>
    <string name="set_name">Set name</string>
    <string name="name_textview">Name:</string>
    <string name="my_courses_title">My courses:</string>
    <string name="no_courses_yet_to_show">No courses yet to show</string>
    <string name="edit_course">Edit Course:</string>
    <string name="course_name">Name:</string>
    <string name="enter_course_name_here">Enter course name here</string>
    <string name="course_code">Course Code:</string>
    <string name="example_department_code">AAA</string>
    <string name="example_course_code">111</string>
    <string name="dash">-</string>
    <string name="start_time">Start Time:</string>
    <string name="sample_start_time_h">10</string>
    <string name="sample_start_time_m">30</string>
    <string name="colon">:</string>
    <string name="end_time">End Time:</string>
    <string name="sample_end_time_h">11</string>
    <string name="sample_end_time_m">20</string>
    <string name="monday_btn">M</string>
    <string name="tuesday_btn">T</string>
    <string name="wednesday_btn">W</string>
    <string name="thursday_btn">R</string>
    <string name="friday_btn">F</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="back">Back</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="choose_course_color">Choose course color</string>
    <string name="am_8">8:00</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Fri</string>
    <string name="am_9">9:00</string>
    <string name="am_10">10:30</string>
    <string name="am_11">11:30</string>
    <string name="pm_12">12:30</string>
    <string name="pm_1">1:30</string>
    <string name="pm_2">2:30</string>
    <string name="pm_3">3:30</string>
    <string name="pm_4">4:30</string>
    <string name="pm_5">5:30</string>
    <string name="pm_6">6:30</string>
    <string name="hours">hours</string>
    <string name="course_length">Course length:</string>
    <string name="example_title">Example Title</string>
    <string name="sample_course_code2">ABC-123</string>
    <string name="pm_7">7:30</string>
    <string name="pm_8">8:30</string>
    <string name="pm_9">9:30</string>
    <string name="edit_event">Edit Event:</string>
    <string name="event_name">Event Name:</string>
    <string name="enter_event_name_here">Enter event name here</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="time">Time:</string>
    <string name="edit_event_example_date">Tues 4/30/20</string>
    <string name="edit_event_example_time">1:30 PM</string>
    <string name="assignment">Assignment</string>
    <string name="exam">Exam</string>
    <string name="event">Event</string>
    <string name="course">Course:</string>
    <string name="description_optional">Description (optional)</string>
    <string name="notifications">Notifications</string>
    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_close">Close navigation drawer</string>
    <string name="home_page_description">Thank you for downloading the Gustie Planner App! This app was developed by a Gustavus class of 2022 student, and is not a product of Gustavus.
    If you have any questions or bugs to report, please contact me in the side toolbar.</string>
    <string name="home_page_title">Welcome to Gustie Planner</string>
    <string name="dark_theme">"Dark Theme    "</string>
    <string name="toggle_see_on_startup">"Select to not see this on startup    "</string>
    <string name="intro_page">Intro Page</string>
    <string name="moodle_webpage">Moodle Webpage</string>
    <string name="gustavus_webpage">Gustavus Webpage</string>
    <string name="contact_me">Contact me</string>
    <string name="daily_schedule">Daily Schedule</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="profile">Profile</string>
    <string name="other">Other</string>
</resources>
