<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/HeaderText"
            android:text="@string/edit_event" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                style="@style/BodyText"
                android:text="@string/event_name" />

            <EditText
                android:id="@+id/edit_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextBox"
                android:hint="@string/enter_event_name_here"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                style="@style/BodyText"
                android:text="@string/time" />

            <Button
                android:id="@+id/edit_event_date_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/standard_button"
                android:textColor="?attr/buttonTextColor"
                android:text="@string/edit_event_example_date" />

            <Button
                android:id="@+id/edit_event_time_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/standard_button"
                android:textColor="?attr/buttonTextColor"
                android:text="@string/edit_event_example_time" />


        </LinearLayout>

        <RadioGroup
            android:id="@+id/edit_event_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/edit_event_assignment_radio"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:buttonTint="?attr/highlight"
                android:text="@string/assignment"
                android:textColor="?attr/textColor"/>

            <RadioButton
                android:id="@+id/edit_event_exam_radio"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:buttonTint="?attr/highlight"
                android:text="@string/exam"
                android:textColor="?attr/textColor"/>

            <RadioButton
                android:id="@+id/edit_event_event_radio"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:buttonTint="?attr/highlight"
                android:text="@string/event"
                android:textColor="?attr/textColor"/>

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                style="@style/BodyText"
                android:text="@string/course" />

            <Spinner
                android:id="@+id/edit_event_course_spinner"
                android:backgroundTint="?attr/highlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:lines="3"
            style="@style/EditTextBox"
            android:hint="@string/description_optional" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/BodyText"
                    android:text="@string/notifications" />

                <ImageButton
                    android:id="@+id/edit_event_new_notification"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/circle_button"
                    android:src="@android:drawable/ic_menu_add" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_event_notification_list_container"
                android:layout_marginStart="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/edit_event_no_notifications_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                style="@style/BodyText"
                android:text="@string/no_notifications_to_show" />
        </LinearLayout>

        <Button
            android:id="@+id/edit_event_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/standard_button"
            android:textColor="?attr/buttonTextColor"
            android:text="@string/submit_btn" />
    </LinearLayout>
</ScrollView>