<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/HeaderText"
            android:text="@string/user_profile"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                style="@style/BodyText"
                android:text="@string/name_textview" />

            <EditText
                android:id="@+id/input_name_text"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                style="@style/EditTextBox"
                tools:text=""
                android:hint="@string/name_hint" />

            <Button
                android:id="@+id/set_name_btn"
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:background="@drawable/standard_button"
                android:textColor="?attr/buttonTextColor"
                android:text="@string/set_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/BodyText"
                    android:text="@string/my_courses_title" />

                <ImageButton
                    android:id="@+id/new_course_btn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@android:drawable/ic_menu_add" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/course_list_container"
                android:layout_marginStart="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/no_courses_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                style="@style/BodyText"
                android:text="@string/no_courses_yet_to_show" />
        </LinearLayout>

        <Button
            android:id="@+id/profile_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/standard_button"
            android:textColor="?attr/buttonTextColor"
            android:text="@string/back" />

    </LinearLayout>
</ScrollView>