<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="?attr/backgroundColor">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="@style/HeaderText"
        android:text="@string/home_page_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        style="@style/BodyText"
        android:text="@string/home_page_description" />

    <Switch
        android:id="@+id/toggle_dark_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:textColor="?attr/textColor"
        android:layout_gravity="center_horizontal" />
</LinearLayout>